<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Event Type Text -->
        <TextView
            android:id="@+id/event_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:text="@string/event_type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Location Text -->

        <!-- Event Icon -->

        <!-- Horizontal Buttons Layout -->

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_type_text"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/location"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/event_icon"
            android:layout_width="51dp"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/alert_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/alert"
                android:backgroundTint="@color/blue"/>

            <Button
                android:id="@+id/dismiss_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismiss"
                android:backgroundTint="@color/red"/>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>